[tool.poetry]
name = "курсовая 1"
version = "0.1.0"
description = ""
authors = ["Alexandra Baukhina <Baukhina88@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
# максимальная длина строки
line-length = 119
exclude = ['.git']


[tool.isort]
# максимальная длина строки
line_length = 119


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'